# tetris_ai_runner

./: .gitignore  CMakeLists.txt  CMakePresets.json  demo.vcxproj  dll_setting.h  tetris_ai_dll.vcxproj  tetris_ai_runner.sln  tetris_ai_runner.vcxproj  the_ai_games.vcxproj  top_bot.vcxproj  top_pso.vcxproj  zzztoj_iodll.vcxproj
src/: ai.cpp  ai_setting.h  ai_zzz.cpp  ai_zzz.h  dll_setting.h  io_dll.cpp  io_dll_legacy.cpp  io_dll_misa.cpp  io_dll_specs.h  io_pso.cpp  io_uds.cpp  pso.cpp  rule_io.cpp  rule_io.h  rule_qq.cpp  rule_srsx.cpp  rule_st.cpp  rule_toj.cpp  search_amini.cpp  search_amini.h  search_cautious.cpp  search_path.cpp  search_simple.cpp  search_simulate.cpp  search_tag.cpp  search_tspin.cpp  search_tspin.h  tetris_core.cpp  tetris_core.h  the_ai_games.cpp  vs.cpp
